adjustments based on the feedback

--- a/views/new.erb
+++ b/views/new.erb
@@ -1,11 +1,9 @@
-<% @title = "メモ作成" %>
-
-<h1>メモ作成</h1>
+<h1><%= h(@title) %></h1>
 <form action="/memos" method="POST">
   <p>タイトル:</p>
-  <input type="text" name="title" id="title" maxlength="50" autocomplete="off">
+  <input type="text" name="title">
   <p>内容:</p>
-  <textarea name="content" id="content" maxlength="500"></textarea>
+  <textarea name="content"></textarea>
   <div class="button-group">
     <button type="submit">保存</button>
     <a href="/memos">戻る</a>
