--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,4 @@
-<% @title = "メモ一覧" %>
-
-<h1>メモ一覧</h1>
+<h1><%= h(@title) %></h1>
 <a href="/memos/new" class="new-memo-button">新規作成</a>
 <ul class="memo-list">
   <% @memos.each do |memo| %>
